--- a/engine/templates/page.html
+++ b/engine/templates/page.html
@@ -44,7 +44,7 @@
   	<div id="disqus_thread" style="margin-top: 20px;"></div>
 		<script>
 			var disqus_config = function () {
-				this.page.url = 'http://nanvel.name{{ page.uri }}';
+				this.page.url = 'http://nanvel.name/{{ page.uri }}';
 				this.page.identifier = '{{ page.uri }}';
 			};
 			(function() {
