--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -17,7 +17,7 @@
         {% end %}
       </section>
       <div style="clear: both;"></div>
-      <footer>&copy; 2011-{{ datetime.datetime.utcnow().strftime('%Y') }}, <a href="/pages/oleksandr-polieno">Oleksandr Polieno</a></footer>
+      <footer>&copy; 2011-{{ datetime.datetime.utcnow().strftime('%Y') }}, <a href="/pages/oleksandr-polieno">Oleksandr Polieno</a>. Powered by <a href="https://github.com/nanvel/c2p2" target="_blank">c2p2</a>.</footer>
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
