updated python post

--- a/engine/templates/label.html
+++ b/engine/templates/label.html
@@ -4,7 +4,7 @@
 
 {% block sidebar %}
 <div class="sidebar-block">
-  <span class="block-title">Tags</span>
+  <span class="block-title">Labels</span>
   <ul class="tags">
     {% for label in labels %}
       {% if label != current %}
