--- a/engine/templates/page.html
+++ b/engine/templates/page.html
@@ -4,7 +4,7 @@
 
 {% block sidebar %}
 	<div class="sidebar-block">
-		<span class="block-title">Tags</span>
+		<span class="block-title">Labels</span>
 		<ul class="tags">
   		{% for label in page.labels %}
       	<li><a href="{{ reverse_url('label', label.slug) }}">{{ label.title }}</a></li>
