--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{% block title %}{% end %} - nanvel.name</title>
-    <link type="text/css" href="/engine/templates/style.css" rel="stylesheet"/>
+    <link type="text/css" href="/engine/templates/style.css?v=1" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
   <body>
