--- a/engine/templates/style.css
+++ b/engine/templates/style.css
@@ -11,8 +11,13 @@ h1, h2, h3, h4 {
     color: #111111;
     font-weight: 400;
 }
-h1, h2, h3, h4, h5, p {
+h1, h2, h3, h4, h5 {
     margin-bottom: 24px;
+    padding: 0;
+}
+p {
+    margin-bottom: 12px;
+    margin-top: 24px;
     padding: 0;
 }
 h1 { font-size: 48px; }
