--- a/engine/templates/page.html
+++ b/engine/templates/page.html
@@ -29,7 +29,7 @@
   {% end %}
   <div class="sidebar-block">
   	<span class="block-title">Edit</span>
-  	<a href="https://github.com/nanvel/blog/blob/master/{{ c.page.uri }}.md" target="_blank">&#x270D; edit on GitHub</a>
+  	<a href="https://github.com/nanvel/blog/blob/master/{{ c.page.uri }}.md" target="_blank">&#x270D;&nbsp; edit on GitHub</a>
   </div>
 {% end %}
 {% block content %}
