--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>{% block title %}{% end %} - nanvel.name</title>
+    {% block meta %}{% end %}
     <link type="text/css" href="/engine/templates/style.css?v=1" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
