fixed article date format

--- a/engine/templates/page.html
+++ b/engine/templates/page.html
@@ -41,7 +41,7 @@
 {% block content %}
   <article>
     {% raw c.page.html %}
-    <time datetime="{{ c.page.created.strftime('%Y-%M-%d') }}" pubdate></time>
+    <time datetime="{{ c.page.created.strftime('%Y-%m-%d') }}" pubdate></time>
     <div class="license">
     	Licensed under <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank" class="creative-commons">CC BY-SA 3.0</a>
     </div>
