--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8"/>
     <title>{% block title %}{% end %} - nanvel.name</title>
     {% block meta %}{% end %}
-    <link type="text/css" href="/engine/templates/style.css?v=1" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="text/css" href="/engine/templates/style.css?v=2" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
   <body>
@@ -12,20 +13,20 @@
       <a href="{{ reverse_url('index') }}" class="home">&#x1f3e1;</a>
         {% block sidebar %}
         {% end %}
-      </aside>
-      <section>
-        {% block content %}
-        {% end %}
-      </section>
-      <div style="clear: both;"></div>
-      <footer>&copy; 2011-{{ datetime.datetime.utcnow().strftime('%Y') }}, <a href="/pages/oleksandr-polieno">Oleksandr Polieno</a>. Powered by <a href="https://github.com/nanvel/c2p2" target="_blank">c2p2</a>.</footer>
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    </aside>
+    <section>
+      {% block content %}
+      {% end %}
+    </section>
+    <div style="clear: both;"></div>
+    <footer>&copy; 2011-{{ datetime.datetime.utcnow().strftime('%Y') }}, <a href="/pages/oleksandr-polieno">Oleksandr Polieno</a>. Powered by <a href="https://github.com/nanvel/c2p2" target="_blank">c2p2</a>.</footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-34097174-1', 'auto');
         ga('send', 'pageview');
-      </script>
+    </script>
   </body>
 </html>
