--- a/engine/templates/base.html
+++ b/engine/templates/base.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" href="/engine/templates/style.css?v=5" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-34097174-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-34097174-1');
+    </script>
   </head>
   <body>
     <aside>
